# ComposeEngine

./: .gitignore  README.md
Game Engine 2D/: .gitignore  Acceleration.cpp  Acceleration.hpp  AddedComponentEvent.cpp  AddedComponentEvent.hpp  Animation.cpp  Animation.hpp  Animations.cpp  Animations.hpp  Animator.cpp  Animator.h  Animator.hpp  Animator.tpp  AnimatorOLD.cpp  AnimatorOLD.hpp  Appearance.cpp  Appearance.hpp  AttackWhenInRange.cpp  AttackWhenInRange.h  BTEngine.cpp  BTEngine.hpp  BehaviourTree.cpp  BehaviourTree.hpp  Camera.cpp  Camera.h  Camera.hpp  ClassRegistry.cpp  ClassRegistry.hpp  Collider.cpp  Collider.hpp  CollisionDetection.cpp  CollisionDetection.hpp  CollisionDetectionUtils.cpp  CollisionDetectionUtils.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionEvent.cpp  CollisionEvent.hpp  Component.hpp  Component.tpp  (+113 more)
Game Engine 2D.xcodeproj/: project.pbxproj
Game Engine 2D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Game Engine 2D.xcodeproj/project.xcworkspace/xcuserdata/andreacatalini.xcuserdatad/: UserInterfaceState.xcuserstate
Game Engine 2D.xcodeproj/xcuserdata/andreacatalini.xcuserdatad/xcschemes/: Game Engine 2D.xcscheme  xcschememanagement.plist
Game Engine 2D/include/: Camera.hpp  ClassRegistry.hpp  Engine.hpp  MathLib.hpp  World.hpp
Game Engine 2D/include/AI/: BehaviourTree.hpp
Game Engine 2D/include/Components/: EntityFlag.hpp  FieldOfView.hpp  Transform.hpp  Velocity.hpp
Game Engine 2D/include/DebugUtils/: GeometryDebugger.hpp
Game Engine 2D/include/Entities/: EntityManager.hpp
Game Engine 2D/include/Events/: AddedComponentEvent.hpp  EventBase.hpp  EventListener.hpp  EventManager.hpp
Game Engine 2D/include/GameExample/Behaviours/Systems/: FOVspotter.hpp
Game Engine 2D/include/GameObjects/: Player.hpp
Game Engine 2D/include/Systems/: CollisionDetector.hpp  InputSystem.hpp  Renderer.hpp
Game Engine 2D/lib/: libpugi.dylib  libtmx-loader.dylib
Game Engine 2D/resources/maps/: Test_Level.tmx
Game Engine 2D/src/: Engine.cpp  FPS.cpp  SfmlInputEvent.cpp  World.cpp  main.cpp
Game Engine 2D/src/AI/: BehaviourTree.cpp
Game Engine 2D/src/AI/BasicNodes/: Repeater.cpp  Sequence.cpp
Game Engine 2D/src/Animations/: Animation.cpp  Animations.cpp
Game Engine 2D/src/Collisions/: CollisionDetectionUtils.cpp
Game Engine 2D/src/Components/: Appearance.cpp  Component.tpp
Game Engine 2D/src/Entities/: EntityManager.cpp
Game Engine 2D/src/Events/: AddedComponentEvent.cpp  EventManager.cpp
Game Engine 2D/src/GameExample/AI/: AttackWhenInRange.cpp
Game Engine 2D/src/GameExample/GameObjects/: Door.cpp
Game Engine 2D/src/Systems/: Animator.cpp  Movement.cpp  Renderer.cpp  SystemBase.cpp  SystemManager.cpp
Game Engine 2D/src/Utils/: UtilConstants.cpp  Utils.cpp
Game Engine 2D/tmx/: DebugShape.cpp  DebugShape.hpp  Log.cpp  Log.hpp  MapLayer.cpp  MapLayer.hpp  MapLoader.hpp  MapLoaderPrivate.cpp  MapLoaderPublic.cpp  MapObject.cpp  MapObject.hpp  QuadTreeNode.cpp  QuadTreeNode.hpp
GameEngine/: .gitignore  CMakeLists.txt  EngineConfig.h  EngineConfig.h.in
GameEngine/include/: Constants.hpp  Engine.hpp  FPS.hpp  SfmlInputEvent.hpp  stdafx.h
GameEngine/include/AI/BasicNodes/: Repeater.hpp  Selector.hpp  Sequence.hpp
GameEngine/include/Animations/: Animation.hpp  Animations.hpp
GameEngine/include/Collisions/: CollisionDetectionUtils.hpp  CollisionEvent.hpp
GameEngine/include/Components/: Acceleration.hpp  Appearance.hpp  Collider.hpp  Component.hpp  Controller.hpp
GameEngine/include/DebugUtils/: GeometryDebugger.hpp
GameEngine/include/Entities/: EntityUtils.hpp
GameEngine/include/Events/: Event.hpp  InputEvent.hpp
GameEngine/include/GameExample/AI/: AttackWhenInRange.hpp  Patrolling.hpp
GameEngine/include/GameExample/GameObjects/: Door.hpp  Luigi.hpp
GameEngine/include/GameObjects/: GameObject.hpp  GameObjectType.hpp
GameEngine/include/Systems/: Animator.hpp  BTEngine.hpp  Movement.hpp  System.hpp  SystemBase.hpp  SystemManager.hpp
GameEngine/include/Utils/: UtilConstants.hpp  Utils.hpp
GameEngine/resources/maps/: desert.tmx
GameEngine/src/: Camera.cpp  ClassRegistry.cpp  Constants.cpp  Engine.cpp  FPS.cpp  MathLib.tpp  main.cpp
GameEngine/src/AI/: CMakeLists.txt
GameEngine/src/AI/BasicNodes/: CMakeLists.txt  Selector.cpp
GameEngine/src/Animations/: CMakeLists.txt
GameEngine/src/Collisions/: CMakeLists.txt  CollisionEvent.cpp
GameEngine/src/Components/: Acceleration.cpp  Appearance.cpp  CMakeLists.txt  Collider.cpp  ComponentBase.cpp  Controller.cpp  EntityFlag.cpp  Transform.cpp  Velocity.cpp
GameEngine/src/DebugUtils/: CMakeLists.txt  GeometryDebugger.cpp
GameEngine/src/Entities/: CMakeLists.txt  EntityUtils.cpp
GameEngine/src/Events/: CMakeLists.txt  Event.tpp  EventBase.cpp  EventListener.cpp  InputEvent.cpp
GameEngine/src/GameExample/: CMakeLists.txt
GameEngine/src/GameExample/AI/: CMakeLists.txt  Patrolling.cpp
GameEngine/src/GameExample/Behaviours/: CMakeLists.txt
GameEngine/src/GameExample/Behaviours/Components/: FieldOfView.cpp
GameEngine/src/GameExample/Behaviours/Systems/: FOVspotter.cpp
GameEngine/src/GameExample/GameObjects/: CMakeLists.txt  Luigi.cpp
GameEngine/src/GameObjects/: CMakeLists.txt  GameObject.cpp  Player.cpp
GameEngine/src/Systems/: BTEngine.cpp  CMakeLists.txt  CollisionDetector.cpp  InputSystem.cpp  Movement.cpp  System.tpp
GameEngine/src/Utils/: CMakeLists.txt
GameEngine2D.xcodeproj/: project.pbxproj
GameEngine2D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GameEngine2D.xcodeproj/xcuserdata/andreacatalini.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
GameEngine2D.xcodeproj/xcuserdata/andreacatalini.xcuserdatad/xcschemes/: Game Engine 2D.xcscheme
